@@ -97,6 +97,10 @@ END_LEASE=250
 #Leasetime  (When should the client renew it's IP)
 LEASE_DURATION=12h
 
+# Where is the leasefile stored to?
+LEASE_FILE_LOCATION=$PIRATEBOX_FOLDER/tmp/lease.file
+
+
 # Define the netmask
 NETMASK=255.255.255.0
 
