@@ -1,12 +1,0 @@
-[Unit]
-Description=PirateBox Service
-
-[Service]
-Type=forking
-ExecStart=/opt/piratebox/bin/piratebox.sh start
-ExecStop=/opt/piratebox/bin/piratebox.sh stop
-Restart=/opt/piratebox/bin/piratebox.sh restart
-PIDFile=/var/run/piratebox.pid
-
-[Install]
-WantedBy=multi-user.target
